compiler/testData/diagnostics/tests/inlineClasses/reifiedGenericUnderlyingType.fir.kt
// LANGUAGE: +InlineClasses, -JvmInlineValueClasses
// SKIP_TXT

inline class ICAny<<!REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T>(val value: T)
